# plagiarism-detector

./: hello.py  pyproject.toml
plagiarism_detector/: test.ipynb
