[project]
name = "plagiarism-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "tensorflow>=2.18.0",
    "tf-keras>=2.18.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
]
